--- a/service-web/src/components/login/forgetPassword/forgetPassword.html
+++ b/service-web/src/components/login/forgetPassword/forgetPassword.html
@@ -9,8 +9,8 @@
           <div class="cf db o-90">
             <div class="fl w-100 w-50-l w-50-m pa4 avenir">
               <div class="cf w-100">
-                <div class="w-50 fl f4 fw5 navy tl">Sign In</div>
-                <div class="w-50 fr f6 fw6 blue tr mt2" @click.prevent="openSignUp($event)">SIGN UP</div>
+                <div class="w-60 fl f4 fw5 navy tl">Forget password</div>
+                <div class="w-40 fr f6 fw6 blue tr mt2" @click.prevent="openSignIn($event)">SIGN IN</div>
               </div>
               <div class="w-100 cf"><p class="f6 f5-ns lh-copy measure tl navy avenir mt2">Lorem ipsum dolor sit amet,
                 consectetur adipiscing.</p></div>
@@ -19,36 +19,16 @@
                   <div class="mt3">
                     <input class="pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 w-100 navy" type="email"
                            name="email-address"
-                           id="email-address"
                            v-validate="'required|email'"
                            data-vv-as="email"
                            v-model="email"
-                           placeholder="Username or e-mail"/>
+                           placeholder="e-mail"/>
                     <span v-show="errors.has('email-address')" class="help is-danger absolute left-2 mt1">{{ errors.first('email-address') }}</span>
                   </div>
-                  <div class="mt4">
-                    <input
-                      class=" pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 bg-transparent w-100"
-                      type="password"
-                      v-validate="'required|alpha_num'"
-                      data-vv-as="password"
-                      v-model="password"
-                      name="password"
-                      id="password"
-                      placeholder="Password"/>
-                    <span v-show="errors.has('password')" class="help is-danger absolute left-2 mt1">{{ errors.first('password') }}</span>
-                  </div>
                 </fieldset>
-                <div class="lh-copy pt0 avenir">
-                  <a class="f6 fw6 link dim blue db tr"  @click.prevent="openForgetPassword($event)">FORGOT PASSWORD</a>
-                </div>
                 <div class="cf w-100 mt4">
                   <a class="f6 link dim br-pill ph3 pv3 mb2 dib white blue-dark-color w-100" href="#0"
-                     @click.prevent="signIn($event)">LOGIN</a>
-                </div>
-                <div class="cf w-100 mt2">
-                  <a class="f6 fw6 link dim br-pill ph3 pv3 mb2 dib ba b--lightest-blue blue w-100" href="#0">FACEBOOK
-                    CONNECT</a>
+                     @click.prevent="forgetPassword($event)">RESET PASSWORD</a>
                 </div>
               </form>
             </div>
