--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -1,13 +1,15 @@
 <div class="wrapper">
   <section class="cf w-100 ph0 ph6-l mt4">
-    <div class="dt w-100 mw8 ph4 ph4-m ph3-l center read-more">
+    <div class="dt w-100 mw8 ph4 ph4-m ph3-l center">
       <div class="cf db mv5 avenir">
         <div class="w-50 fl pt5-l pt5-m pt2">
-          <h1 class="f3 f1-l f1-m navy w-70-l b tr fr mt0-ns mb2 right--1 right--2-l relative">Feel more
+          <h1 class="f4 f1-l f1-m navy w-70-l b tr fr mt0-ns mb2 right--1 right--2-l relative">Feel more
             confident </h1>
-          <a href="/"
-             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr5-l pr5-m mt1">Be more aware of what you can do. Add movement
-            progressively into your life.</a>
+          <div
+            class="read-more f6 f5-l f5-m fw5 fl w-100  tr pr2 pr5-l pr5-m mt1">Be more aware of what you can do. Add
+            movement
+            progressively into your life.
+          </div>
         </div>
         <div class="w-50 fl bg-light-gray h4 h5-l h5-m stretching-img-small"
              style=" background-image: url('http://res.cloudinary.com/drj4dg734/image/upload/v1520963115/Activepathways/assets/lp_feel_confident.png');">
@@ -18,20 +20,24 @@
              style=" background-image: url('http://res.cloudinary.com/drj4dg734/image/upload/v1520963115/Activepathways/assets/lp_dancer_increase_wellbeing.jpg');">
         </div>
         <div class="w-50 fl pt5-l pt5-m pt2">
-          <h1 class="f3 f1-l f1-m navy w-90-l tl b fl mt0-ns mb2 left--1 left--2-l relative">Increase your
+          <h1 class="f4 f1-l f1-m navy w-90-l tl b fl mt0-ns mb2 left--1 left--2-l relative">Increase your
             wellbeing </h1>
-          <a href="/"
-             class="f6 f5-l f5-m  fw5 fl w-100  tl pr0 pr4-l pr4-m ml4 pl3 mt2">Moving more will help you feel more
-            energised, happier and healthier.</a>
+          <div
+            class="read-more mid-outbox f6 f5-l f5-m  fw5 fl w-100  tl pr0 pl5-l pl5-m pl0 mt2">Moving more will help
+            you feel more
+            energised, happier and healthier.
+          </div>
         </div>
       </div>
       <div class="cf db mv5 avenir">
         <div class="w-50 fl pt5-l pt5-m pt2">
-          <h1 class="f3 f1-l f1-m navy w-70 b w-60-l w-70-m tr fr mt0-ns mb2 right--1 right--2-l relative">Change your
+          <h1 class="f4 f1-l f1-m navy w-70 b w-60-l w-70-m tr fr mt0-ns mb2 right--1 right--2-l relative">Change your
             life </h1>
-          <a href="/"
-             class="f6 f5-l f5-m fw5 fl w-100  tr pr0 pr4-l pr4-m mt3">A small step can have an immediate impact, or
-            make a significant difference in your life</a>
+          <div
+            class="read-more f6 f5-l f5-m fw5 fl w-100  tr pr2 pr5-l pr5-m mt3">A small step can have an immediate
+            impact, or
+            make a significant difference in your life
+          </div>
         </div>
         <div class="w-50 fl bg-light-gray h4 h5-l h5-m stretching-img-small"
              style=" background-image: url('http://res.cloudinary.com/drj4dg734/image/upload/v1520963115/Activepathways/assets/lp_walk_with_friend_change_life.jpg');">
