--- a/service-web/src/views/challenge-page/challenge-page.html
+++ b/service-web/src/views/challenge-page/challenge-page.html
@@ -80,14 +80,12 @@
                     commodo ligula
                     eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
                     ridiculus mus. </p>
-                  <p class="f5 fw4 navy tl avenir">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-                    commodo ligula
-                    eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
-                    ridiculus mus. </p>
-                  <p class="f5 fw4 navy tl avenir">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-                    commodo ligula
-                    eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
-                    ridiculus mus. </p>
+                  <p class="f5 fw4 navy tl avenir">Your wellbeing not only depends on how much you exercise, but how
+                    much physical activity you perform during the day, how long you spend sitting and the quality of
+                    your sleep.</p>
+                  <p class="f5 fw4 navy tl avenir">A study reported in the Journal of Clinical Nutrition found that
+                    short bouts of exercise, just three minutes at a time, for a total of 30 minutes a day, lowered
+                    several measures of cardiac risk as effectively as one continuous 30-minute session.</p>
                 </div>
               </div>
               <div>
@@ -136,9 +134,9 @@
                   </div>
                   <div class="w-100 mt5"><img src="../../assets/images/stretching_v4.png"/></div>
                 </div>
-                <div class="fl w-60 pa2"><p class="f5 fw4 navy tl avenir">Getting awareness of our current behaviours
-                  irs the first step to replacing them with new ones, and for this purpose it is essential toidenify
-                  cues and triggers that start our habits</p>
+                <div class="fl w-60 pa2"><p class="f5 fw4 navy tl avenir">Getting awareness of our current behaviours is
+                  the first step to replacing them with new ones, and for this purpose it is essential to identify cues
+                  and triggers that start our habits.</p>
                   <p class="f5 fw4 navy tl avenir">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
                     commodo ligula
                     eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
@@ -147,10 +145,9 @@
                     commodo ligula
                     eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
                     ridiculus mus. </p>
-                  <p class="f5 fw4 navy tl avenir">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-                    commodo ligula
-                    eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
-                    ridiculus mus. </p>
+                  <p class="f5 fw4 navy tl avenir">A study reported in the Journal of Clinical Nutrition found that
+                    short bouts of exercise, just three minutes at a time, for a total of 30 minutes a day, lowered
+                    several measures of cardiac risk as effectively as one continuous 30-minute session.</p>
                 </div>
               </div>
               <div>
