--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -225,7 +225,7 @@
           <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
             Reach us
           </h3>
-          <p class="f6 fw5 white mt1"> (mailto: activepathways@smartplayds.com)</p>
+          <p class="f6 fw5 white mt1"><a class="no-underline underline-hover white" href="mailto:activepathways@smartplayds.com">(mailto: activepathways@smartplayds.com)</a></p>
           <h3 class="f4 fw6 w-90-l ma0-ns pa0-ns white">
             Join our community on Facebook
           </h3>
