--- a/service-web/src/views/Dashboard/dashboard.html
+++ b/service-web/src/views/Dashboard/dashboard.html
@@ -8,27 +8,27 @@
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
       <div class="w-100 bg-white black br3 mb4">
         <span class="w-100 db bg-washed-blue br4 br--top bt3">
-          <span class="w-30 db br4 bg-dark-blue pa1"></span>
+          <span class="w-30 db br4 blue-dark-color pa1"></span>
         </span>
         <div class="w-100 pa3">
-          <div class="w-100  pa1 tl dark-blue">Program 1</div>
+          <div class="w-100  pa1 tl f5 fw6 navy">Program 1</div>
           <div class="cf db">
-            <article class="mw7 center ph3 ph5-ns tc br2 pv3">
+            <article class="mw7 center ph0 ph5-ns tc br2 pv3">
               <h2 class="fw4 f4 lh-copy mt0 mb3 navy">
                 Day 3 - 01/08
               </h2>
-              <h1 class=" b f2 f2-ns navy lh-title mt0 mb3">
+              <h1 class="b f4 f2-ns navy lh-title w-90-l ph1 ph3-l ph3-m mt0 mb3 center">
                 Enjoy a short walk after lunch to power your brain
               </h1>
-              <p class="fw4 f5 mt0 mb3 w-80 center navy">
-                This will change things. And we want you to be involved. This text needs to be longer for testing sake.
-                Sign up for beta access or learn more about x.
+              <p class="lh-copy mt0 mb3 w-100 w-90-l ph2 w-90-m center color-light">
+                Mauris augue ipsum, incident non fermentum a, ullamcorper eget velt. In non bibendum ante, at ultricies nisl. Integer diam ipsum, sodale in diam quis
+                condimento fringilla mi a tincidunt.
               </p>
               <div>
-                <a class="f6 link dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy" href="/">
+                <a class="small-font fw6 link dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy" href="/">
                   ACCEPT TRAIN
                 </a>
-                <a class="f6 link dim br-pill ph4 pv2 w-100 db mb2 mt3 dib light-blue" href="/">
+                <a class="small-font fw6 link dim br-pill ph4 pv2 w-100 db mb2 mt3 dib color-light-blue" href="/">
                   SKIP TRAIN TODAY
                 </a>
               </div>
@@ -41,88 +41,69 @@
   </section>
   <section class="cf w-100 ph0 ph6-l relative">
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
-      <div class="gradient-blue-1 w-100 left-0 right-0 absolute h-25 z-0"></div>
+      <div class="gradient-blue-1 w-100 left-0 right-0 absolute h4 z-0"></div>
       <div class="cf relative">
         <div class="fl w-100 w-50-l pl0 pr0 pr3-l  ">
           <div class="bg-white br3 box-shadow-grey">
-            <ul class="list pl0 tl navy mt0">
-              <li class="pa3 pa4-ns bb b--black-10 pb5 pb5-l">
-                <b class="db f3 mb1 w-50 w-70-l fl">My journal</b>
-                <div class="db f6 mb1 tr fw6 fr w-50 w-30-l pr3 light-blue">SEE ALL NOTES</div>
+            <ul class="list pl0 tl mt0">
+              <li class="pa3 pa4-ns bb b--black-05 pb5 pb5-l">
+                <b class="db f3 mb1 w-50 w-70-l fl navy">My journal</b>
+                <div class="db f6 mb1 tr fw6 fr w-50 w-30-l pt2 pt0-l pt0-m pr3 color-light-blue">SEE ALL NOTES</div>
               </li>
-              <li class="pa3 pa4-ns bb b--black-10">
-                <span class="f5 db lh-copy measure">
-                  <span class="fw5">The positioning of text within the page margins. Alignment</span>
-                  can be flush left, flush right, justified, or centered.</span>
+              <li class="pa3 pa3-ns bb b--black-05">
+                <span class="f5 db lh-copy measure color-light">
+                  <span class="fw5">Enjoy a short walk to power your brain</span>
+                  <span class="fw3 db truncate w5 w-100-l w-100-m">Fermentum a, ullamcorper eget velt. In non bibendum ante</span></span>
               </li>
-              <li class="pa3 pa4-ns bb b--black-10">
-                <span class="f5 db lh-copy measure">
-                  <span class="fw5">The positioning of text within the page margins. Alignment</span>
-                  can be flush left, flush right, justified, or centered.</span>
+              <li class="pa3 pa3-ns bb b--black-05">
+                <span class="f5 db lh-copy measure color-light">
+                  <span class="fw5">Program 1, day 3 - Walk 2 bus Stops</span>
+                  <span class="fw3 db truncate w5 w-80-l w-80-m">Mauris augue ipsum, incident non fermentum a, ullamcorper eget velt</span></span>
               </li>
-              <li class="pa3 pa4-ns bb b--black-10">
-                <span class="f5 db lh-copy measure">
-                  <span class="fw5">The positioning of text within the page margins. Alignment</span>
-                  can be flush left, flush right, justified, or centered.</span>
+              <li class="pa3 pa3-ns">
+                <span class="f5 db lh-copy measure color-light">
+                  <span class="fw5">Program 1, day 3 - Walk 2 bus Stops</span>
+                  <span class="fw3 db truncate w5 w-80-l w-80-m">Mauris augue ipsum, incident non fermentum a, ullamcorper eget velt</span></span>
               </li>
             </ul>
           </div>
         </div>
         <div class="fl w-100 w-50-l pl0 pl3-l  ">
-          <div class="bg-white br3 box-shadow-grey">
-            <ul class="list pl0 tl navy mt0">
-              <li class=" pt4 pb4  pb1-m pa4 pa4-l">
-                <b class="db f3 mb1">January 2018</b>
-              </li>
-              <li class="pa3 pa4-ns bb b--black-10">
-                <span class="f5 db lh-copy measure">
-                  <span class="fw5">The positioning of text within the page margins. Alignment</span>
-                  can be flush left, flush right, justified, or centered.</span>
-              </li>
-              <li class="pa3 pa4-ns bb b--black-10">
-                <span class="f5 db lh-copy measure">
-                  <span class="fw5">The positioning of text within the page margins. Alignment</span>
-                  can be flush left, flush right, justified, or centered.</span>
-              </li>
-              <li class="pa3 pa4-ns bb b--black-10">
-                <span class="f5 db lh-copy measure">
-                  <span class="fw5">The positioning of text within the page margins. Alignment</span>
-                  can be flush left, flush right, justified, or centered.</span>
-              </li>
-            </ul>
+          <div class="bg-white br3 box-shadow-grey vCalender pt4 pb3">
+            <datepicker :inline="true"></datepicker>
           </div>
         </div>
 
         <div class="fl w-100 mt4 ">
           <div class="bg-white br3 box-shadow-grey">
-            <ul class="list pl0 mt0 tl navy">
+            <ul class="list pl0 mt0 tl">
               <li
-                class="flex items-center lh-copy pa4 ml4 ph0-l bb b--washed-blue">
-                <b class="db f3 mb1 w-70 fl">Activity log</b>
-                <div class="db f6 mb1 tr fw6 fr w-30 pr3 light-blue">SEE ALL ACTIVITIES</div>
+                class="flex items-center lh-copy pa4 ph0-l bb b--black-05">
+                <b class="db f3 mb1 w-50 w-70-l w-70-m fl navy pl2 pl4-m pl4-l">Activity log</b>
+                <a href="" class="db small-font mb1 tr fw6 pt2 pt0-l pt0-m fr w-50 w-30-l w-30-m pr2 pr4-m pr4-l no-underline color-light-blue">SEE ALL ACTIVITIES</a>
               </li>
               <li
-                class="flex items-center lh-copy pa3 ph0-l bb b--washed-blue ">
-                <img class="w2 h2 w2-ns h2-ns br-100 ml4" src="http://tachyons.io/img/avatar-mrmrs.jpg"/>
+                class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m bb b--black-05 ">
+                <img class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l" src="../../assets/images/smil-icon.png"/>
                 <div class="pl3 flex-auto">
-                  <span class="f6 db">Program 1 Day 3 - 01/08</span>
-                  <span class="f5 fw5 db">The positioning of text within the page margins. Alignment</span>
+                  <span class="f5 fw5 db color-light">Program 1 Day 3 - 01/08</span>
+                  <span class="f6 f4-m f4-l fw5 db color-light">Enjoy a short walk to power your brain</span>
                 </div>
               </li>
               <li
-                class="flex items-center lh-copy pa3 ph0-l bb b--washed-blue ">
-                <img class="w2 h2 w2-ns h2-ns br-100 ml4" src="http://tachyons.io/img/avatar-mrmrs.jpg"/>
+                class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m bb b--black-05 ">
+                <img class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l" src="../../assets/images/smil-icon.png"/>
                 <div class="pl3 flex-auto">
-                  <span class="f6 db">Program 1 Day 3 - 01/08</span>
-                  <span class="f5 fw5 db">The positioning of text within the page margins. Alignment</span>
+                  <span class="f5 fw5 db color-light">Program 1 Day 3 - 01/08</span>
+                  <span class="f6 f4-m f4-l fw5 db color-light">Enjoy a short walk to power your brain</span>
                 </div>
               </li>
               <li
-                class="flex items-center lh-copy pa3 ph0-l ">
-                <img class="w2 h2 w2-ns h2-ns br-100 ml4" src="http://tachyons.io/img/avatar-mrmrs.jpg"/>
+                class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m ">
+                <img class="w2 h2 w2-ns h2-ns br-100 ml2 ml4-m ml4-l" src="../../assets/images/smil-icon.png"/>
                 <div class="pl3 flex-auto">
-                  <span class="f6 db">Program 1 Day 3 - 01/08</span>
-                  <span class="f5 fw5 db">The positioning of text within the page margins. Alignment</span>
+                  <span class="f5 fw5 db color-light">Program 1 Day 3 - 01/08</span>
+                  <span class="f6 f4-m f4-l fw5 db color-light">Enjoy a short walk to power your brain</span>
                 </div>
               </li>
 
@@ -132,10 +113,10 @@
       </div>
     </div>
   </section>
-  <footer class="cf w-100 bg-light-gray lightest-blue mt5">
+  <footer class="cf w-100 bg-light-gray mt5">
     <div class="w-80 center tc pv4-ns">
       <div class="cf">
-        <div class="f2 f3-ns b">FOOTER</div>
+        <div class="f2 f3-ns b dark-light">FOOTER</div>
       </div>
     </div>
   </footer>
