fixed grid mobile view and alignment challange or challenge state page

--- a/service-web/src/views/ChallengeStates/challenge-states.html
+++ b/service-web/src/views/ChallengeStates/challenge-states.html
@@ -20,14 +20,14 @@
             <div class="w-60 fl pa1 f6 fw5 tr blue">CHECK CHALLENGE DETAILS</div>
           </div>
           <div class="cf db">
-            <article class="w-100 mw7 center ph3 ph5-ns tc br2 pv3">
+            <article class="w-100 mw7 center ph0 ph5-ns tc br2 pv3">
               <h2 class="fw4 f4 tc lh-copy mt0 mb3 navy">
                 Day 3 - 01/08
               </h2>
-              <h1 class=" b f2 f2-ns navy lh-title mt0 mb3">
+              <h1 class=" b f4 f2-ns navy lh-title mt0 mb3">
                 Enjoy a short walk after lunch to power your brain
               </h1>
-              <p class="fw4 f5 mt0 mb3 w-80 center navy">
+              <p class="fw4 f6 f5-ns mt0 mb3 w-100 w-80-ns center navy">
                 This will change things. And we want you to be involved. This text needs to be longer for testing sake.
                 Sign up for beta access or learn more about x.
               </p>
@@ -58,14 +58,14 @@
             <div class="w-60 fl pa1 f6 fw5 tr blue">CHECK CHALLENGE DETAILS</div>
           </div>
           <div class="cf db">
-            <article class="w-100 mw7 center ph3 ph5-ns tc br2 pv3">
+            <article class="w-100 mw7 center ph0 ph5-ns tc br2 pv3">
               <h2 class="fw4 f4 tc lh-copy mt0 mb3 navy">
                 Day 3 - 01/08
               </h2>
-              <h1 class=" b f2 f2-ns navy lh-title mt0 mb3">
+              <h1 class=" b f4 f2-ns navy lh-title mt0 mb3">
                 Enjoy a short walk after lunch to power your brain
               </h1>
-              <p class="fw4 f5 mt0 mb3 w-80 center navy">
+              <p class="fw4 f5 mt0 mb3 w-100 w-80-ns center navy">
                 This will change things. And we want you to be involved. This text needs to be longer for testing sake.
                 Sign up for beta access or learn more about x.
               </p>
@@ -94,14 +94,14 @@
             <div class="w-60 fl pa1 f6 fw5 tr blue">CHECK CHALLENGE DETAILS</div>
           </div>
           <div class="cf db o-90">
-            <article class="w-100 mw7 center ph3 ph5-ns tc br2 pv3">
+            <article class="w-100 mw7 center ph0 ph5-ns tc br2 pv3">
               <h2 class="fw4 f4 tc lh-copy mt0 mb3 navy">
                 Day 3 - 01/08
               </h2>
-              <h1 class=" b f2 f2-ns navy lh-title mt0 mb3">
+              <h1 class=" b f4 f2-ns navy lh-title mt0 mb3">
                 Enjoy a short walk after lunch to power your brain
               </h1>
-              <p class="fw4 f5 mt0 mb3 w-80 center navy">
+              <p class="fw4 f6 f5-ns mt0 mb3 w-100 w-80-ns center navy">
                 This will change things. And we want you to be involved. This text needs to be longer for testing sake.
                 Sign up for beta access or learn more about x.
               </p>
@@ -130,34 +130,34 @@
             <div class="w-60 fl pa1 f6 fw5 tr blue">CHECK CHALLENGE DETAILS</div>
           </div>
           <div class="cf db o-90">
-            <article class="w-100 mw7 center ph3 ph5-ns tc br2 pv3">
+            <article class="w-100 mw7 center ph0 ph5-ns tc br2 pv3">
               <h2 class="fw4 f4 tc lh-copy mt0 mb3 navy">
                 Day 3 - 01/08
               </h2>
-              <h1 class=" b f3 f2-ns navy lh-title mt0 mb3">
+              <h1 class=" b f4 f2-ns navy lh-title mt0 mb3">
                 Congratulation!
               </h1>
-              <h1 class=" f3 f3-ns strike fw6-ns gray lh-title mt0 mb3">
+              <h1 class=" f5 f3-ns strike fw6-ns gray lh-title mt0 mb3">
                 Enjoy a short walk after lunch to power your brain
               </h1>
-              <p class="fw5 f4 mt0 mb3 w-80 center navy">
+              <p class="fw5 f6 mt0 mb3 w-100 w-80-ns center navy">
                 Well done, how do you feel about it?
               </p>
               <div class="cf db">
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
               </div>
               <div>
@@ -185,34 +185,34 @@
             <div class="w-60 fl pa1 f6 fw5 tr blue">CHECK CHALLENGE DETAILS</div>
           </div>
           <div class="cf db o-90">
-            <article class="w-100 mw7 center ph3 ph5-ns tc br2 pv3">
+            <article class="w-100 mw7 center ph0 ph5-ns tc br2 pv3">
               <h2 class="fw4 f4 tc lh-copy mt0 mb3 navy">
                 Day 3 - 01/08
               </h2>
-              <h1 class=" b f3 f2-ns navy lh-title mt0 mb3">
+              <h1 class=" b f4 f2-ns navy lh-title mt0 mb3">
                 Try harder tommarrow!
               </h1>
-              <h1 class=" f3 f3-ns strike fw6-ns gray lh-title mt0 mb3">
+              <h1 class=" f5 f3-ns strike fw6-ns gray lh-title mt0 mb3">
                 Enjoy a short walk after lunch to power your brain
               </h1>
-              <p class="fw5 f4 mt0 mb3 w-80 center navy">
+              <p class="fw5 f6 f4-ns mt0 mb3 w-100 w-80-ns center navy">
                 Well done, how do you feel about it?
               </p>
               <div class="cf db">
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
               </div>
               <div>
@@ -238,14 +238,14 @@
             <div class="w-60 fl pa1 f6 fw5 tr blue">CHECK CHALLENGE DETAILS</div>
           </div>
           <div class="cf db">
-            <article class="w-100 mw7 center ph3 ph5-ns tc br2 pv3">
+            <article class="w-100 mw7 center ph0 ph5-ns tc br2 pv3">
               <h2 class="fw4 f4 tc lh-copy mt0 mb3 navy">
                 Day 3 - 01/08
               </h2>
-              <h1 class=" b f2 f2-ns navy lh-title mt0 mb3">
+              <h1 class=" b f4 f2-ns navy lh-title mt0 mb3">
                 Enjoy a short walk after lunch to power your brain
               </h1>
-              <p class="fw4 f5 mt0 mb3 w-80 center navy">
+              <p class="fw4 f6 f5-ns mt0 mb3 w-100 w-80-ns center navy">
                 This will change things. And we want you to be involved. This text needs to be longer for testing sake.
                 Sign up for beta access or learn more about x.
               </p>
