--- a/service-web/src/views/challenge-page/challenge-page.html
+++ b/service-web/src/views/challenge-page/challenge-page.html
@@ -13,31 +13,31 @@
         </span>
         <div class="w-100 pa3">
           <div class="cf db o-90">
-            <article class="w-100 mw7 center ph3 ph5-ns tc br2 pv3">
-              <h1 class=" b f3 f2-ns navy lh-title mt0 mb3">
+            <article class="w-100 mw7 center ph0 ph3-m ph3-l tc br2 pv3">
+              <h1 class=" b f4 f2-ns navy lh-title mt0 mb3">
                 Congratulation, you made it!
               </h1>
               <h1 class=" f5 f5-ns strike fw6-ns gray lh-title mt0 mb3">
                 Being active (or inactive) is a consequence of our behaviours and habits
               </h1>
-              <p class="fw5 f4 mt0 mb3 w-80 center navy">
+              <p class="fw5 f6 f4-ns mt0 mb3 w-100 w-80-m w-80-l center navy">
                 Well done, how do you feel about it?
               </p>
               <div class="cf db">
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
                 <a class="link dim dib mr3 pa0" href="#" title="">
-                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w3 o-60"/>
+                  <img src="../../assets/images/iconmonstr-smiley-2.svg" class="w2 w3-ns o-60"/>
                 </a>
               </div>
               <div>
@@ -65,7 +65,7 @@
           <div class="cf db o-90">
             <article class="w-100 mw7 center ph3 ph4-ns tc br2 pv4">
               <div class="cf db">
-                <div class="fl w-40 pa2">
+                <div class="fl w-100 w-40-ns pa2">
                   <div class="w-90 f5 fw5 black-40 tl avenir lh-copy"> Being active (or inactive) is a consequence of
                     our
                     behaviours
@@ -73,7 +73,7 @@
                   </div>
                   <div class="w-100 mt5"><img src="../../assets/images/stretching_v4.png"/></div>
                 </div>
-                <div class="fl w-60 pa2"><p class="f5 fw4 navy tl avenir">Getting awareness of our current behaviours
+                <div class="fl w-100 w-60-ns pa2"><p class="f5 fw4 navy tl avenir">Getting awareness of our current behaviours
                   irs the first step to replacing them with new ones, and for this purpose it is essential toidenify
                   cues and triggers that start our habits</p>
                   <p class="f5 fw4 navy tl avenir">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
@@ -102,11 +102,11 @@
         </span>
         <div class="w-100 pa3">
           <div class="cf db o-90">
-            <article class="w-100 mw7 center ph3 ph5-ns tc br2 pv3">
-              <h1 class=" b f3 f3-ns navy lh-title mt0 mb3">
+            <article class="w-100 mw7 center ph0 ph5-ns tc br2 pv3">
+              <h1 class=" b f4 f3-ns navy lh-title mt0 mb3">
                 Being active (or inactive) is a consequence of our behaviours and habits
               </h1>
-              <p class="fw5 f5 mt0 mb3 w-80 center navy lh-copy">
+              <p class="fw5 f6 mt0 mb3 w-100 w-80-ns center navy lh-copy">
                 Getting awareness of our current behaviours
                 irs the first step to replacing them with new ones, and for this purpose it is essential toidenify
                 cues and triggers that start our habits
@@ -126,7 +126,7 @@
           <div class="cf db o-90">
             <article class="w-100 mw7 center ph3 ph4-ns tc br2 pv4">
               <div class="cf db">
-                <div class="fl w-40 pa2">
+                <div class="fl w-100 w-40-ns pa2">
                   <div class="w-90 f5 fw5 black-40 tl avenir lh-copy"> Being active (or inactive) is a consequence of
                     our
                     behaviours
@@ -134,7 +134,7 @@
                   </div>
                   <div class="w-100 mt5"><img src="../../assets/images/stretching_v4.png"/></div>
                 </div>
-                <div class="fl w-60 pa2"><p class="f5 fw4 navy tl avenir">Getting awareness of our current behaviours is
+                <div class="fl w-100 w-60-ns pa2"><p class="f5 fw4 navy tl avenir">Getting awareness of our current behaviours is
                   the first step to replacing them with new ones, and for this purpose it is essential to identify cues
                   and triggers that start our habits.</p>
                   <p class="f5 fw4 navy tl avenir">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
