--- a/service-web/src/views/Dashboard/dashboard.html
+++ b/service-web/src/views/Dashboard/dashboard.html
@@ -21,11 +21,13 @@
                 Enjoy a short walk after lunch to power your brain
               </h1>
               <p class="lh-copy mt0 mb3 w-100 w-90-l ph2 w-90-m center color-light">
-                Mauris augue ipsum, incident non fermentum a, ullamcorper eget velt. In non bibendum ante, at ultricies nisl. Integer diam ipsum, sodale in diam quis
+                Mauris augue ipsum, incident non fermentum a, ullamcorper eget velt. In non bibendum ante, at ultricies
+                nisl. Integer diam ipsum, sodale in diam quis
                 condimento fringilla mi a tincidunt.
               </p>
               <div>
-                <a class="small-font fw6 link dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy" href="/">
+                <a class="small-font fw6 link dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy"
+                   href="/">
                   ACCEPT TRAIN
                 </a>
                 <a class="small-font fw6 link dim br-pill ph4 pv2 w-100 db mb2 mt3 dib color-light-blue" href="/">
@@ -43,7 +45,7 @@
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
       <div class="gradient-blue-1 w-100 left-0 right-0 absolute h4 z-0"></div>
       <div class="cf relative">
-        <div class="fl w-100 w-50-l pl0 pr0 pr3-l  ">
+        <div class="fl w-100 w-50-ns pl0 pr0 pr2-ns  ">
           <div class="bg-white br3 box-shadow-grey">
             <ul class="list pl0 tl mt0">
               <li class="pa3 pa4-ns bb b--black-05 pb5 pb5-l">
@@ -68,7 +70,7 @@
             </ul>
           </div>
         </div>
-        <div class="fl w-100 w-50-l pl0 pl3-l  ">
+        <div class="fl w-100 w-50-ns pl0 pl2-ns  ">
           <div class="bg-white br3 box-shadow-grey vCalender pt4 pb3">
             <datepicker :inline="true"></datepicker>
           </div>
@@ -80,7 +82,9 @@
               <li
                 class="flex items-center lh-copy pa4 ph0-l bb b--black-05">
                 <b class="db f3 mb1 w-50 w-70-l w-70-m fl navy pl2 pl4-m pl4-l">Activity log</b>
-                <a href="" class="db small-font mb1 tr fw6 pt2 pt0-l pt0-m fr w-50 w-30-l w-30-m pr2 pr4-m pr4-l no-underline color-light-blue">SEE ALL ACTIVITIES</a>
+                <a href=""
+                   class="db small-font mb1 tr fw6 pt2 pt0-l pt0-m fr w-50 w-30-l w-30-m pr2 pr4-m pr4-l no-underline color-light-blue">SEE
+                  ALL ACTIVITIES</a>
               </li>
               <li
                 class="flex items-center lh-copy pv3 pv4-m pv4-l ph3 ph4-l ph4-m ph0-m bb b--black-05 ">
