--- a/service-web/src/components/login/signIn/signIn.html
+++ b/service-web/src/components/login/signIn/signIn.html
@@ -4,7 +4,7 @@
     <div class="w-100 modal-dialog dtc v-mid ph2">
       <div class="w-100  mb5 z-3 relative" @click.prevent="$event.stopPropagation()">
         <div class="w-100 bg-white  black br3 shadow-default animation">
-          <i class="bg-white h1 w1 absolute top-0 top--1-m top--1-l br-100 right-0 right--1-l right--1-m pa1 z-4 br5 cr"
+          <i class="bg-white h1 w1 absolute top-0 top--1-m top--1-l br-100 right-0 right--1-l right--1-m pa1 z-4 br5 pointer"
              @click.prevent="closeModal($event)"><img src="../../../assets/images/close-icon.png"/></i>
           <div class="cf db o-90">
             <div class="fl w-100 w-50-l w-50-m pa4 avenir">
